tests/suite/snapshots/suite__check__tests__check__bad-class-shadowing1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-class-shadowing1.xi:2:1]
   │
 2 │ class A {}
   · ─────┬────  
   ·      ╰────── Name already bound in environment
───╯

